--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.8.5",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
-    "expo": "~48.0.15",
+    "expo": "^47.0.11",
     "expo-app-loading": "~1.3.0",
     "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-react-native-shadow": "^1.0.3",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.3",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-drop-shadow": "^0.0.4",
