--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-react-native-shadow": "^1.0.3",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-collapsible": "^1.6.0",
@@ -33,6 +34,8 @@
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.3",
     "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-shadow-2": "^6.0.4",
@@ -43,7 +46,8 @@
     "redux": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
