--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.8.5",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
+    "axios": "^1.4.0",
     "expo": "^47.0.11",
     "expo-app-loading": "~1.3.0",
     "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
+    "expo-google-app-auth": "~8.3.0",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.0.1",
     "expo-react-native-shadow": "^1.0.3",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
@@ -41,9 +44,7 @@
     "react-native-shadow-2": "^6.0.4",
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.18.11",
-    "react-redux": "^7.2.8",
-    "redux": "^4.1.2"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
