--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.0.10",
@@ -17,14 +18,18 @@
     "axios": "^1.4.0",
     "expo": "^47.0.11",
     "expo-app-loading": "~1.3.0",
+    "expo-auth-session": "~3.8.0",
     "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-linear-gradient": "~12.1.2",
     "expo-location": "~15.0.1",
+    "expo-random": "~13.0.0",
     "expo-react-native-shadow": "^1.0.3",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
+    "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.3",
