--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "repuestos-ya",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,23 +15,27 @@
     "@react-navigation/stack": "^6.2.1",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
     "axios": "^1.4.0",
-    "expo": "^47.0.11",
+    "expo": "~47.0.14",
     "expo-app-loading": "~1.3.0",
+    "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
     "expo-clipboard": "~4.1.2",
+    "expo-crypto": "~12.0.0",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.1.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-linear-gradient": "~12.1.2",
     "expo-location": "~15.0.1",
     "expo-random": "~13.0.0",
     "expo-react-native-shadow": "^1.0.3",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react": "18.1.0",
+    "react-native": "0.70.8",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-drop-shadow": "^0.0.4",
