--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
+    "i": "^0.3.7",
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
+    "npm": "^9.6.7",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-collapsible": "^1.6.0",
@@ -50,6 +52,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-shadow-2": "^6.0.4",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "~0.18.11"
