--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
     "expo-web-browser": "~12.0.0",
-    "i": "^0.3.7",
+    "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "nativewind": "^2.0.11",
     "npm": "^9.6.7",
@@ -56,7 +56,8 @@
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
