--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-picker/picker": "^2.4.10",
@@ -57,6 +58,7 @@
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-utils-navigation-bar": "^2.0.4",
     "react-native-web": "~0.18.11",
     "react-native-wizard": "^2.1.1",
     "yup": "^1.2.0"
