--- a/package.json
+++ b/package.json
@@ -11,22 +11,24 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.8.5",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
     "expo": "~47.0.14",
-    "expo-app-loading": "~1.3.0",
+    "expo-app-loading": "~2.1.1",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
-    "expo-clipboard": "~4.1.2",
+    "expo-clipboard": "~4.0.1",
     "expo-crypto": "~12.0.0",
     "expo-dev-client": "~2.0.1",
-    "expo-font": "~11.1.1",
+    "expo-font": "~11.0.1",
     "expo-google-app-auth": "~8.3.0",
-    "expo-linear-gradient": "~12.1.2",
+    "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-random": "~13.0.0",
     "expo-react-native-shadow": "^1.0.3",
@@ -44,15 +46,16 @@
     "react-native-dashed-line": "^1.1.0",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-phone-input": "^1.3.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.3.2",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^6.0.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-snap-carousel-v4": "^1.0.1",
