--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-phone-input": "^1.3.3",
