--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-location": "~15.0.1",
     "expo-random": "~13.0.0",
     "expo-react-native-shadow": "^1.0.3",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.15.6",
