agregando nombre a la app

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "repuestos-ya",
-    "slug": "mis-repuestos",
+    "name": "Ruédalo",
+    "slug": "Ruédalo",
     "scheme": "myapp",
     "version": "1.0.0",
     "orientation": "portrait",
