--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Ruédalo",
-    "slug": "Ruédalo",
+    "slug": "ruedalo",
     "scheme": "myapp",
     "version": "1.0.0",
     "orientation": "portrait",
