--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
@@ -50,6 +51,7 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^15.0.1",
@@ -60,7 +62,6 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^6.0.4",
-    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
@@ -68,6 +69,7 @@
     "react-native-utils-navigation-bar": "^2.0.4",
     "react-native-web": "~0.18.11",
     "react-native-wizard": "^2.1.1",
+    "rn-placeholder": "^3.0.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
