--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~11.0.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-linear-gradient": "~12.0.1",
+    "expo-linking": "~3.3.1",
     "expo-location": "~15.0.1",
     "expo-random": "~13.0.0",
     "expo-react-native-shadow": "^1.0.3",
