--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-google-app-auth": "~8.3.0",
+    "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-linking": "~3.3.1",
     "expo-location": "~15.0.1",
