--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "nativewind": "^2.0.11",
     "npm": "^9.6.7",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.8",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
+    "react-native-debugger-open": "^0.3.25",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "~2.8.0",
