--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-app-loading": "~2.1.1",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
+    "expo-build-properties": "~0.4.1",
     "expo-clipboard": "~4.0.1",
     "expo-crypto": "~12.0.0",
     "expo-dev-client": "~2.0.1",
