--- a/eas.json
+++ b/eas.json
@@ -5,8 +5,7 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "gradleCommand": ":app:assembleDebug"
+      "distribution": "internal"
     },
     "preview": {
       "developmentClient": false,
