--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-text-input-mask": "^3.2.0",
     "react-native-utils-navigation-bar": "^2.0.4",
     "react-native-web": "~0.18.11",
     "react-native-wizard": "^2.1.1",
