--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "react-native-dashed-line": "^1.1.0",
     "react-native-debugger-open": "^0.3.25",
     "react-native-drop-shadow": "^0.0.4",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
