--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "@stripe/stripe-react-native": "^0.28.0",
+    "@stripe/stripe-react-native": "0.23.3",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
