--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "@stripe/stripe-react-native": "0.23.3",
+    "@stripe/stripe-react-native": "0.19.0",
     "@twotalltotems/react-native-otp-input": "^1.3.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
@@ -31,7 +31,7 @@
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-google-app-auth": "~8.3.0",
-    "expo-image-picker": "^14.1.1",
+    "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-linking": "~3.3.1",
     "expo-location": "~15.0.1",
@@ -47,7 +47,7 @@
     "nativewind": "^2.0.11",
     "npm": "^9.6.7",
     "react": "18.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-collapsible": "^1.6.0",
     "react-native-curved-bottom-bar": "^3.2.6",
@@ -57,7 +57,7 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "1.3.2",
