--- a/package.json
+++ b/package.json
@@ -9,26 +9,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
-    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@stripe/stripe-react-native": "0.19.0",
-    "@twotalltotems/react-native-otp-input": "^1.3.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "expo": "~47.0.14",
     "expo-application": "~5.0.1",
     "expo-auth-session": "~3.8.0",
     "expo-build-properties": "~0.4.1",
-    "expo-clipboard": "~4.0.1",
     "expo-crypto": "~12.0.0",
-    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-google-app-auth": "~8.3.0",
     "expo-image-picker": "~14.0.2",
@@ -44,6 +38,7 @@
     "expo-web-browser": "~12.0.0",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
+    "metro-config": "^0.76.7",
     "nativewind": "^2.0.11",
     "npm": "^9.6.7",
     "react": "18.1.0",
@@ -52,31 +47,22 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-dashed-line": "^1.1.0",
-    "react-native-debugger-open": "^0.3.25",
-    "react-native-drop-shadow": "^0.0.4",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-linear-gradient": "^2.6.2",
-    "react-native-maps": "1.3.2",
     "react-native-mask-text": "^0.14.1",
     "react-native-modal": "^13.0.1",
-    "react-native-modal-datetime-picker": "^15.0.1",
     "react-native-phone-input": "^1.3.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
     "react-native-shadow-2": "^6.0.4",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
-    "react-native-swipe-list-view": "^3.2.9",
-    "react-native-utils-navigation-bar": "^2.0.4",
-    "react-native-web": "~0.18.11",
     "react-native-wizard": "^2.1.1",
     "react-phone-number-input": "^3.2.23",
     "rn-placeholder": "^3.0.3",
