--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "repuestos-ya",
+  "name": "ruedalo",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start --dev-client",
@@ -40,9 +40,7 @@
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
     "nativewind": "^2.0.11",
-    "npm": "^9.6.7",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-collapsible": "^1.6.0",
     "react-native-curved-bottom-bar": "^3.2.6",
