--- a/package.json
+++ b/package.json
@@ -7,58 +7,61 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "resolutions": {
+    "@expo/config-plugins": "^6.0.2"
+  },
   "dependencies": {
+    "@expo/config-plugins": "^6.0.2",
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "@stripe/stripe-react-native": "0.19.0",
+    "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "expo": "~47.0.14",
-    "expo-application": "~5.0.1",
-    "expo-auth-session": "~3.8.0",
-    "expo-build-properties": "~0.4.1",
-    "expo-crypto": "~12.0.0",
-    "expo-font": "~11.0.1",
+    "expo": "^48.0.0",
+    "expo-application": "~5.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-build-properties": "~0.6.0",
+    "expo-crypto": "~12.2.1",
+    "expo-font": "~11.1.1",
     "expo-google-app-auth": "~8.3.0",
-    "expo-image-picker": "~14.0.2",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-linking": "~3.3.1",
-    "expo-location": "~15.0.1",
-    "expo-random": "~13.0.0",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
+    "expo-random": "~13.1.1",
     "expo-react-native-shadow": "^1.0.3",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.15.6",
-    "expo-web-browser": "~12.0.0",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
     "nativewind": "^2.0.11",
-    "react": "18.1.0",
-    "react-native": "0.70.8",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-collapsible": "^1.6.0",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-text": "^0.14.1",
     "react-native-modal": "^13.0.1",
     "react-native-phone-input": "^1.3.3",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-reanimated-carousel": "^3.3.2",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-shadow-2": "^6.0.4",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-snap-carousel-v4": "^1.0.1",
     "react-native-svg": "13.4.0",
     "react-native-wizard": "^2.1.1",
