--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.0.10",
@@ -24,11 +25,9 @@
     "dayjs": "^1.11.7",
     "expo": "^48.0.0",
     "expo-application": "~5.1.1",
-    "expo-auth-session": "~4.0.3",
     "expo-build-properties": "~0.6.0",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
-    "expo-google-app-auth": "~8.3.0",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
@@ -39,7 +38,6 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "expo-web-browser": "~12.1.1",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
