--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": ["**/*"],
+    "notification": {
+      "icon": "./assets/adaptive-icon.png",
+      "color": "#000000"
+    },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.daele.repuestosya"
