--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "expo-auth-session": "^4.0.3",
     "expo-build-properties": "~0.6.0",
     "expo-crypto": "~12.2.1",
+    "expo-device": "^5.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
+    "expo-notifications": "^0.18.1",
     "expo-permissions": "^14.1.1",
     "expo-random": "~13.1.1",
     "expo-react-native-shadow": "^1.0.3",
