--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-google-signin/google-signin": "7.2.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.0.10",
@@ -23,9 +22,8 @@
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "expo": "^48.0.0",
+    "expo": "~48.0.18",
     "expo-application": "~5.1.1",
-    "expo-auth-session": "^4.0.3",
     "expo-build-properties": "~0.6.0",
     "expo-crypto": "~12.2.1",
     "expo-device": "^5.2.1",
@@ -42,7 +40,6 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "expo-web-browser": "^12.1.1",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
