--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "expo": "~48.0.18",
+    "expo-auth-session": "^4.0.3",
     "expo-device": "^5.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
@@ -34,6 +35,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "expo-web-browser": "^12.1.1",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
