--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "expo": "~48.0.18",
+    "expo": "^48.0.0",
     "expo-auth-session": "^4.0.3",
     "expo-device": "^5.2.1",
     "expo-font": "~11.1.1",
