--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@sentry/react-native": "4.15.2",
     "@stripe/stripe-react-native": "0.23.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "expo": "^48.0.0",
-    "expo-auth-session": "^4.0.3",
-    "expo-device": "^5.2.1",
+    "expo": "~48.0.18",
+    "expo-application": "~5.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
@@ -35,7 +38,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "expo-web-browser": "^12.1.1",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.4.0",
     "lottie-react-native": "5.1.4",
     "metro-config": "^0.76.7",
@@ -63,6 +66,7 @@
     "react-native-wizard": "^2.1.1",
     "react-phone-number-input": "^3.2.23",
     "rn-placeholder": "^3.0.3",
+    "sentry-expo": "~6.2.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
