correcion de icono

--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
     "android": {
       "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundImage": "./assets/adaptive-icon.png"
       },
       "package": "com.daele.repuestosya"
     },
