--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-linking": "~4.0.1",
     "expo-location": "~15.1.1",
     "expo-notifications": "^0.18.1",
+    "expo-random": "~13.1.1",
     "expo-react-native-shadow": "^1.0.3",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
