--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-collapsible": "^1.6.0",
     "react-native-curved-bottom-bar": "^3.2.6",
     "react-native-dashed-line": "^1.1.0",
