--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
-      "**/*"
+      "assets/*"
     ],
     "notification": {
       "icon": "./assets/adaptive-icon.png"
