desplegado ultimos cambios

--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,8 @@
     "production": {
       "distribution": "store",
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle",
+        "releaseChannel": "default"
       }
     }
   },
